@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.109 2006/06/25 17:56:02 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.110 2006/08/02 01:19:27 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -1945,19 +1945,33 @@ df_readascii(double v[], int max)
 			return DF_UNDEFINED;    /* store undefined point in plot */
 
 #if defined(GP_STRING_VARS) && defined(EAM_DATASTRINGS)
-		    /* This string value will get parsed as if it were a data column */
-		    /* so put it in quotes to allow embedded whitespace.             */
-		    if (use_spec[output].expected_type == CT_STRING && a.type == STRING) {
-			char *s = gp_alloc(strlen(a.v.string_val)+3,"quote");
-			*s = '"';
-			strcpy(s+1, a.v.string_val);
-			strcat(s, "\"");
-			free(df_stringexpression[output]);
-			df_tokens[output] = df_stringexpression[output] = s;
+		    if (a.type == STRING) {
+			/* This string value will get parsed as if it were a data column */
+			/* so put it in quotes to allow embedded whitespace.             */
+			if (use_spec[output].expected_type == CT_STRING) {
+			    char *s = gp_alloc(strlen(a.v.string_val)+3,"quote");
+			    *s = '"';
+			    strcpy(s+1, a.v.string_val);
+			    strcat(s, "\"");
+			    free(df_stringexpression[output]);
+			    df_tokens[output] = df_stringexpression[output] = s;
+			}
+
+			/* Check for timefmt string generated by a function */
+			if ((df_axis[output] != -1)
+			   && axis_array[df_axis[output]].is_timedata) {
+			    struct tm tm;
+			    if (gstrptime(a.v.string_val,
+					  axis_array[df_axis[output]].timefmt, &tm))
+				v[output] = (double) gtimegm(&tm);
+			    else /* FIXME - Is this correct? Is it needed? */
+				line_okay = 0;
+			}
+			gpfree_string(&a);
 		    } else
 #endif
-		    v[output] = real(&a);
-		    gpfree_string(&a);
+			v[output] = real(&a);
+
 		} else if (column == -2) {
 		    v[output] = df_current_index;
 		} else if (column == -1) {
